# GeoLoop

./: .env  .env.example  .gitignore  Dockerfile  README.md  TODO-avklaringer.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: oppsett-guide.md
geoloop/: config.py  main.py
geoloop/db/: store.py
geoloop/engine/: ice_risk.py
geoloop/web/: app.py
geoloop/web/static/: app.js  index.html  info.html  login.html  style.css
tests/: test_ice_risk.py  test_integration.py  test_store.py
